# webmailsender

./: .gitignore  .python-version  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  setup_local_smtp.md
templates/: base.html  base_backup.html  index.html  index_backup.html  result_detail.html  results.html  send.html  settings.html  template_edit.html
